--- a/coverletter.tex
+++ b/coverletter.tex
@@ -48,13 +48,13 @@
 % The company being applied to
 \recipient
   {Company Recruitment Team}
-  {ESTEQ\\Block 6, Tijgervallei Office Park\\Silverlakes Road, Silverlakes\\Pretoria, South Africa, 0081}
+  {Company\\Address Line 1\\Adress Line 2\\City, Country, Code}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
 \lettertitle{Job Application for Mechanical Engineer}
 % How the letter is opened
-\letteropening{Dear Mr. Earle,}
+\letteropening{Dear Mr./Mrs./Dr. <NAME>,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -89,18 +89,25 @@ but actively seak out new and innovative ways to propel industry into the next e
 also to the engineer I see myself becoming. I have a passion for people and the dynamics of teamwork. I explore creative avenues and learn from the expertise of 
 those around me in order to develop optimal solutions to the problems I encounter. 
 
-\lettersection{Why ESTEQ?}
-ESTEQ is a progressive company which strives to empower industry with the help of technology. ESTEQ is on the forefront of implementing solutions to industry that
-give their clients the tools in which to be competitive on a global market. Being closely linked to many international partners, such as Siemens and MSC, puts ESTEQ
-in the unique position to spearhead South Africa into the digital age. I have had the opportunity to work closely with many people in ESTEQ and the company is one 
-which aligns seamlessly with my interests. ESTEQ is a place in which I can learn, grow and make a difference in. I have experienced the excellence that ESTEQ offers
-and this is why I want to join the ESTEQ team. 
+\lettersection{Why <Company>?}
+Lorem ipsum dolor sit amet, duo id tritani detracto, sonet animal noluisse mel ea. 
+Quis hinc te mea. Eros duis equidem nam ad, an mel nibh detracto intellegebat. Et ius 
+ignota aperiam persequeris, te pri nullam probatus. Has copiosae expetenda vituperatoribus 
+no, vix liber nihil ei, moderatius consequuntur sed ne. Tantas recusabo ea ius.
+
+Ea singulis dignissim sit. Pri populo eleifend intellegebat at. Vel ne saepe tollit, pertinacia
+cotidieque an ius. Zril gloriatur et has. No sea dicta nominavi suscipiantur, nonumy alienum sed te.
+Eos te eros omittam eligendi, oratio aliquid accusam id vis.
 
 \lettersection{Why Me?}
-I am fascinated by innovation. When I am inspired, I do more than what is expected of me. I am quick to learn and self-motivated. Technology and software are my forte 
-and I excel in problem solving. I enjoy working in collaborative teams and creating an outcome which I would not be possible by myself. I believe that my interests and 
-skills can make a positive impact within ESTEQ. I have gained experience in the Siemens software through training provided by ESTEQ as well as using the software on a
-daily basis. This gives me an advantage within ESTEQ as I already have a solid foundation and I am eager to master the skills I already posses. 
+Lorem ipsum dolor sit amet, duo id tritani detracto, sonet animal noluisse mel ea. 
+Quis hinc te mea. Eros duis equidem nam ad, an mel nibh detracto intellegebat. Et ius 
+ignota aperiam persequeris, te pri nullam probatus. Has copiosae expetenda vituperatoribus 
+no, vix liber nihil ei, moderatius consequuntur sed ne. Tantas recusabo ea ius.
+
+Ea singulis dignissim sit. Pri populo eleifend intellegebat at. Vel ne saepe tollit, pertinacia
+cotidieque an ius. Zril gloriatur et has. No sea dicta nominavi suscipiantur, nonumy alienum sed te.
+Eos te eros omittam eligendi, oratio aliquid accusam id vis.
 
 
 \end{cvletter}
