--- a/coverletter.tex
+++ b/coverletter.tex
@@ -25,7 +25,7 @@
 \photo[circle,noedge,left]{Img/PP}
 \name{Dillon M.}{Parfitt}
 \position{Mechanical Engineer{\enskip\cdotp\enskip}Computer Enthusiast}
-\address{77, Doreen Street, Colbyn, Pretoria, 0083, Rep. of South Africa}
+\address{No., Street, Suburb, Pretoria, 0083, Rep. of South Africa}
 
 \mobile{(+27) 82-385-1451}
 \email{dillonparfitt@gmail.com}
