Added Udemy Courses

--- a/src/education.tex
+++ b/src/education.tex
@@ -32,6 +32,18 @@
         \item {Awarded DUX Scholar at Penryn College for 2012}
       \end{cvitems}
     }
+    \cventry
+    {Certificate of Completion} % Degree
+    {Udemy} % Institution
+    {Online Courses} % Location
+    {2018} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Completed: \emph{The Complete Node.js Developer Course (2nd Edition)}}
+        \item {Completed: \emph{React 16 - The Complete Guide (incl. React Router 4 \& Redux)}}
+        \item {Completed: \emph{Build Responsive Real World Websites with HTMl5 and CSS3}}
+      \end{cvitems}
+    }
 
 
 %---------------------------------------------------------
