--- a/src/skills.tex
+++ b/src/skills.tex
@@ -13,6 +13,15 @@
     {Personal} % Category
     {Leadership, Problem Solving, Vision} % Skills
 
+  \cvskill
+    {Programming} % Category
+    {JavaScript, Python, Matlab, LaTeX} % Skills
+  
+    %---------------------------------------------------------
+  \cvskill
+    {Web Development} % Category
+    {Node.js, React.js, HTML5, CSS3} % Skills
+
 %---------------------------------------------------------
   \cvskill
     {CAD} % Category
@@ -24,9 +33,6 @@
     {Siemens Simcenter Pre/Post, Siemens Simcenter Motion, Tecnomatix Plant Simulation} % Skills
 
 %---------------------------------------------------------
-  \cvskill
-    {Programming} % Category
-    {Python, Matlab, LaTeX} % Skills
 
   \cvskill
     {PLM} % Category
