--- a/CV_Dillon.tex
+++ b/CV_Dillon.tex
@@ -41,6 +41,7 @@
     
     \mobile{(+27) 82-385-1451}
     \email{dillonparfitt@gmail.com}
+    \github{DParfitt}
     \gitlab{DParfitt}
     \linkedin{dillonparfitt}
     % \gitlab{gitlab-id}
